--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rs-01-fundamentos-nodejs",
+  "name": "01-fundamentos-nodejs",
   "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch src/serves.js"
+    "dev": "node --watch src/server.js"
   },
   "keywords": [],
   "author": "",
